# ROS2HAL

./: image_proc_hal_class_diagram.mermaid  image_proc_hal_ros_rep.md  image_proc_hal_sequence_diagram.mermaid  image_proc_hal_system_design.md
image_proc_hal/: CMakeLists.txt  package.xml
image_proc_hal/include/image_proc_hal/: capabilities.hpp  debayer_processor.hpp  enums.hpp  memory_manager.hpp  processor_base.hpp  processor_factory.hpp  rectify_processor.hpp  resize_processor.hpp  visibility_control.hpp
image_proc_hal/plugins/: opencv_plugins.xml  sample_vendor_plugins.xml
image_proc_hal/src/: rectify_node_main.cpp
image_proc_hal/src/image_proc_hal/: capabilities.cpp  enums.cpp  processor_base.cpp  processor_factory.cpp  rectify_node.cpp  rectify_node.hpp
image_proc_hal/src/image_proc_hal/plugins/: opencv_debayer_processor.cpp  opencv_debayer_processor.hpp  opencv_memory_manager.cpp  opencv_memory_manager.hpp  opencv_rectify_processor.cpp  opencv_rectify_processor.hpp  opencv_resize_processor.cpp  opencv_resize_processor.hpp  sample_vendor_rectify_processor.cpp  sample_vendor_rectify_processor.hpp
uploads/image_proc/: CHANGELOG.rst  package.xml
uploads/image_proc/doc/: tutorials.rst
uploads/image_proc/include/image_proc/: utils.hpp
uploads/image_proc/src/: crop_decimate.cpp  crop_non_zero.cpp  debayer.cpp  rectify.cpp  resize.cpp  track_marker.cpp
uploads/image_proc/test/: rostest.cpp
